plyr 1.2 (2010-XX-XX) ---------------------------------------------------

* list_to_array works correct even when there are missing values in the array.  
  This is particularly important for daply.

* l*ply, d*ply, a*ply and m*ply all gain a .parallel argument that when TRUE,
  apply functions in parallel using a parallel backend registered with the
  foreach package:

  x <- seq_len(20)
  wait <- function(i) Sys.sleep(0.1)
  system.time(llply(x, wait))
  #  user  system elapsed 
  # 0.007   0.005   2.005 
   
  library(doMC)
  registerDoMC(2) 
  system.time(llply(x, wait, .parallel = TRUE))
  #  user  system elapsed 
  # 0.020   0.011   1.038 

* llply: for simple lists and vectors, with no progress bar, no extra info,
  and no parallelisation, llply calls lapply directly to avoid all the
  overhead associated with those unused extra features

* llply: in serial case, for loop replaced with custom C function that takes
  about 40% less time (or about 20% less time than lapply). Note that as a
  whole, llply still has much more overhead than lapply.

plyr 1.1 (2010-07-19) ---------------------------------------------------

* *dply deals more gracefully with the case when all results are NULL (fixes #10)
* *aply correctly orders output regardless of dimension names (fixes #11)
* join gains type = "full" which preserves all x and y rows

plyr 1.0 (2010-07-02) ---------------------------------------------------

New functions:

* arrange, a new helper method for reordering a data frame.
* count, a version of table that returns data frames immediately and that is
  much much faster for high-dimensional data.
* desc makes it easy to sort any vector in descending order
* join, works like merge but can be much faster and has a somewhat simpler
  syntax drawing from SQL terminology
* rbind.fill.matrix is like rbind.fill but works for matrices, code 
  contributed by C. Beleites

Speed improvements

* experimental immutable data frame (idata.frame) that vastly speeds up